# SegMesh

./: .gitmodules  CMakeLists.txt  README.md
assets/shaders/: fs_triangle.sc  vs_triangle.sc
scripts/: build.sh
src/: main.cpp
